--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -225,7 +225,7 @@ Regardless of whether your are working from the cloud or locally you should now 
 
 As you read each of these example scripts pay attention to the redundancy. Regardless of the of the type of data you analyze there is a great deal of consistency in terms of how all of the scripts start.
 
-Pay particular attention to XXXX where the reearcher assistant didn't fllow and sex as 1 and 
+Also as you follow along on your computer, be sure to used read_csv when you load data not read.csv (the base R appoach). Also note how in the N-way repeated measures design we were forced to deal with a situation where the research assistant indicated male and female using numbers instead of words when entering the data.
 
 ## Experiment: Between 
 
