add section: using help

--- a/02-tidy_intro.Rmd
+++ b/02-tidy_intro.Rmd
@@ -539,3 +539,26 @@ In short you should always use tibbles (i.e., use read_csv not read.csv). The di
 new_dataframe <- as.data.frame(my_tibble)
 ```
 
+
+## Using help
+
+In order to become an efficient at analyzing data using R, you will need to become adapt at reading and understanding the help files associated with each command. After you have activated a packages using the library command (e.g., library(tidyverse)) you can access the help page for every command in that package. To access the help page simply type a question mark followed by the command you want to know how to use (no space between them). The code below bring up the help page for the select() command. Notice I put the library() command first - just an reminder that this needs to be done  to using help for that package. Try the commands below in the Console:
+
+```{r, eval = FALSE}
+library(tidyverse)
+?select
+```
+
+Examine the page that appears on the Help tab in the panel in the lower right of your screen. Read through the help file comparing what you read there to what we have learned about the select command. Notice how the help file tells you about the argument you send into the select() command and also what the select command returns when it receives those commands. Pay particular attention to the examples near the bottom of the help page. As you become more experienced with R this is how you will learn to use new commands().
+
+Try the help page again for the commands below:
+
+* which()
+* mutate()
+* filter()
+
+
+
+
+
+In this chapter you mastered many of the 
