--- a/02-tidy_intro.Rmd
+++ b/02-tidy_intro.Rmd
@@ -553,9 +553,9 @@ Examine the page that appears on the Help tab in the panel in the lower right of
 
 Try the help page again for the commands below:
 
-* which()
-* mutate()
-* filter()
+* which
+* mutate
+* filter
 
 
 
