--- a/02-tidy_intro.Rmd
+++ b/02-tidy_intro.Rmd
@@ -496,9 +496,9 @@ library(tidyverse)
 ?select
 ```
 
-Examine the page that appears on the Help tab in the panel in the lower right of your screen. Read through the help file comparing what you read there to what we have learned about the select command. Notice how the help file tells you about the argument you send into the select() command and also what the select command returns when it receives those commands. Pay particular attention to the examples near the bottom of the help page. As you become more experienced with R this is how you will learn to use new commands().
+Examine the page that appears on the Help tab in the panel in the lower right of your screen. Read through the help file comparing what you read there to what we have learned about the select command. Notice how the help file tells you about the argument you send into the select() command and also what the select command returns when it receives those commands. Pay particular attention to the examples near the bottom of the help page. At the very bottom of the help page you will see [Package dplyr version 1.0.0 Index]. This tell you the select() command is from the dplyr package (part of the tidyverse). Notice that the word Index is underlined. Click on the word Index. You will be presented with list of other commands in the dplyr package.
 
-Try the help page again for the commands below:
+As you become more experienced with R help pages how you will learn to use new commands. Examine the help pages for the commands below:
 
 * filter
 * mutate
