--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -202,7 +202,7 @@
 
 \title{PSYC6060 Course Notes}
 \author{David J. Stanley}
-\date{2020-06-30}
+\date{2020-07-01}
 
 \begin{document}
 \maketitle
@@ -263,68 +263,59 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ## Locale: en_CA.UTF-8 / en_CA.UTF-8 / en_CA.UTF-8 / C / en_CA.UTF-8 / en_CA.UTF-8
 ## 
 ## Package version:
-##   abind_1.4.5         acepack_1.4.1      
-##   apaTables_2.0.5     askpass_1.1        
+##   acepack_1.4.1       askpass_1.1        
 ##   assertthat_0.2.1    backports_1.1.7    
 ##   base64enc_0.1-3     BH_1.72.0.3        
-##   bookdown_0.19.1     boot_1.3.25        
-##   broom_0.7.0.9000    callr_3.4.3        
-##   car_3.0.8           carData_3.0.4      
-##   cellranger_1.1.0    checkmate_2.0.0    
-##   cli_2.0.2           clipr_0.7.0        
-##   cluster_2.1.0       colorspace_1.4-1   
-##   compiler_4.0.1      crayon_1.3.4       
-##   curl_4.3            data.table_1.12.8  
-##   DBI_1.1.0           dbplyr_1.4.3       
-##   desc_1.2.0          digest_0.6.25      
-##   dplyr_1.0.0         ellipsis_0.3.1     
-##   evaluate_0.14       fansi_0.4.1        
-##   farver_2.0.3        forcats_0.5.0      
-##   foreign_0.8-80      Formula_1.2-3      
-##   fs_1.4.1            generics_0.0.2     
-##   ggplot2_3.3.1       glue_1.4.1         
-##   graphics_4.0.1      grDevices_4.0.1    
-##   grid_4.0.1          gridExtra_2.3      
-##   gtable_0.3.0        haven_2.3.1        
-##   highr_0.8           Hmisc_4.4-0        
-##   hms_0.5.3           htmlTable_2.0.0    
-##   htmltools_0.4.0     htmlwidgets_1.5.1  
-##   httr_1.4.1          isoband_0.2.1      
-##   janitor_2.0.1       jpeg_0.1-8.1       
-##   jsonlite_1.6.1      knitr_1.28         
-##   labeling_0.3        lattice_0.20-41    
-##   latticeExtra_0.6-29 lifecycle_0.2.0    
-##   lme4_1.1.23         lubridate_1.7.8    
-##   magrittr_1.5        maptools_1.0.1     
-##   markdown_1.1        MASS_7.3.51.6      
-##   Matrix_1.2-18       MatrixModels_0.4.1 
+##   bookdown_0.19.1     broom_0.7.0.9000   
+##   callr_3.4.3         cellranger_1.1.0   
+##   checkmate_2.0.0     cli_2.0.2          
+##   clipr_0.7.0         cluster_2.1.0      
+##   colorspace_1.4-1    compiler_4.0.1     
+##   crayon_1.3.4        curl_4.3           
+##   data.table_1.12.8   DBI_1.1.0          
+##   dbplyr_1.4.3        desc_1.2.0         
+##   digest_0.6.25       dplyr_1.0.0        
+##   ellipsis_0.3.1      evaluate_0.14      
+##   fansi_0.4.1         farver_2.0.3       
+##   forcats_0.5.0       foreign_0.8-80     
+##   Formula_1.2-3       fs_1.4.1           
+##   generics_0.0.2      ggplot2_3.3.1      
+##   glue_1.4.1          graphics_4.0.1     
+##   grDevices_4.0.1     grid_4.0.1         
+##   gridExtra_2.3       gtable_0.3.0       
+##   haven_2.3.1         highr_0.8          
+##   Hmisc_4.4-0         hms_0.5.3          
+##   htmlTable_2.0.0     htmltools_0.4.0    
+##   htmlwidgets_1.5.1   httr_1.4.1         
+##   isoband_0.2.1       janitor_2.0.1      
+##   jpeg_0.1-8.1        jsonlite_1.6.1     
+##   knitr_1.28          labeling_0.3       
+##   lattice_0.20-41     latticeExtra_0.6-29
+##   lifecycle_0.2.0     lubridate_1.7.8    
+##   magrittr_1.5        markdown_1.1       
+##   MASS_7.3.51.6       Matrix_1.2-18      
 ##   methods_4.0.1       mgcv_1.8.31        
-##   mime_0.9            minqa_1.2.4        
-##   mnormt_1.5-7        modelr_0.1.8       
-##   munsell_0.5.0       nlme_3.1-148       
-##   nloptr_1.2.2.1      nnet_7.3-14        
-##   openssl_1.4.1       openxlsx_4.1.5     
-##   packrat_0.5.0       parallel_4.0.1     
-##   pbkrtest_0.4.8.6    pillar_1.4.4       
+##   mime_0.9            mnormt_1.5-7       
+##   modelr_0.1.8        munsell_0.5.0      
+##   nlme_3.1-148        nnet_7.3-14        
+##   openssl_1.4.1       packrat_0.5.0      
+##   parallel_4.0.1      pillar_1.4.4       
 ##   pkgbuild_1.0.8      pkgconfig_2.0.3    
 ##   pkgload_1.1.0       png_0.1-7          
 ##   praise_1.0.0        prettyunits_1.1.1  
 ##   processx_3.4.2      progress_1.2.2     
 ##   ps_1.3.3            psych_1.9.12.31    
-##   purrr_0.3.4         quantreg_5.55      
-##   R6_2.4.1            RColorBrewer_1.1-2 
-##   Rcpp_1.0.4.6        RcppEigen_0.3.3.7.0
+##   purrr_0.3.4         R6_2.4.1           
+##   RColorBrewer_1.1-2  Rcpp_1.0.4.6       
 ##   readr_1.3.1         readxl_1.3.1       
 ##   rematch_1.0.1       repr_1.1.0         
-##   reprex_0.3.0        rio_0.5.16         
-##   rlang_0.4.6         rmarkdown_2.2      
-##   rpart_4.1-15        rprojroot_1.3.2    
-##   rsconnect_0.8.16    rstudioapi_0.11    
-##   rvest_0.3.5         scales_1.1.1       
-##   selectr_0.4.2       skimr_2.1.1        
-##   snakecase_0.11.0    sp_1.4.2           
-##   SparseM_1.78        splines_4.0.1      
-##   statmod_1.4.34      stats_4.0.1        
+##   reprex_0.3.0        rlang_0.4.6        
+##   rmarkdown_2.2       rpart_4.1-15       
+##   rprojroot_1.3.2     rsconnect_0.8.16   
+##   rstudioapi_0.11     rvest_0.3.5        
+##   scales_1.1.1        selectr_0.4.2      
+##   skimr_2.1.1         snakecase_0.11.0   
+##   splines_4.0.1       stats_4.0.1        
 ##   stringi_1.4.6       stringr_1.4.0      
 ##   survival_3.1-12     sys_3.3            
 ##   testthat_2.3.2      tibble_3.0.1       
@@ -335,7 +326,7 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ##   viridis_0.5.1       viridisLite_0.3.0  
 ##   whisker_0.4         withr_2.2.0        
 ##   xfun_0.14           xml2_1.3.2         
-##   yaml_2.2.1          zip_2.0.4
+##   yaml_2.2.1
 \end{verbatim}
 
 Package names are in bold text (e.g., \textbf{rmarkdown}), and inline code and filenames are formatted in a typewriter font (e.g., \texttt{knitr::knit(\textquotesingle{}foo.Rmd\textquotesingle{})}). Function names are followed by parentheses (e.g., \texttt{bookdown::render\_book()}).
@@ -1953,10 +1944,94 @@ We can make it even easier to see by combining tidyverse commands and using only
 ## 6        1        2       1.5
 \end{verbatim}
 
+\hypertarget{mutate-for-factors}{%
+\subsubsection{mutate() for factors}\label{mutate-for-factors}}
+
+In R it it is critical that you identify categorical variable as categorical variables. In R categorical variables are referred to as factors. A factor like sex has three possible levels: female, male, intersex.
+
+An inspection of the glimpse() command output reveals that the sex column has the type character - as indicated by . Also notice as you inspect this output that we use words (e.g., female) to indicate the sex in the column rather than a number represent a female participant (e.g., 2). This is the preferred but less common approach to entering data.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{glimpse}\NormalTok{(data_exp)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## Rows: 6
+## Columns: 7
+## $ id            <dbl> 1, 2, 3, 4, 5, 6
+## $ sex           <chr> "male", "female", "male", "female...
+## $ t1_vomit      <dbl> 3, 2, 0, 3, 2, 1
+## $ t1_aggression <dbl> -0.5, 0.5, -1.5, 1.5, -2.5, 2.5
+## $ t2_vomit      <dbl> 2, 1, 1, 2, 1, 2
+## $ t2_aggression <dbl> -0.5, 0.5, -0.5, 0.5, -1.5, 1.5
+## $ vomit_avg     <dbl> 2.5, 1.5, 0.5, 2.5, 1.5, 1.5
+\end{verbatim}
+
+We need to convert the sex column to a factor in order for R to handle it appropriately in analyses. Failure to indicate column is a factor could result in R conducting all the analyses and presenting the incorrect results. Consequently, it is critical that we covert the column to a factor. Fortunately, that is easily done using the as\_factor() command (there is also an as.factor command if as\_factor won't work for some reason).
+
+We convert the sex column to a factor with this code:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{data_exp <-}\StringTok{ }\NormalTok{data_exp }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{sex =} \KeywordTok{as_factor}\NormalTok{(sex))}
+\end{Highlighting}
+\end{Shaded}
+
+You can confirm this worked with the glimpse() command:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{data_exp <-}\StringTok{ }\NormalTok{data_exp }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{sex =} \KeywordTok{as_factor}\NormalTok{(sex))}
+\end{Highlighting}
+\end{Shaded}
+
+If you entered your data using words (e.g., male, female) for the levels of sex you're done at this point. However, if you used numbers to represent each sex in your data there is one more step. You have to indicate to R which sex each number represents. We do that with the code below.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{data_exp <-}\StringTok{ }\NormalTok{data_exp }\OperatorTok{%>%}
+\StringTok{  }\KeywordTok{mutate}\NormalTok{(}\DataTypeTok{sex =} \KeywordTok{fct_recode}\NormalTok{(sex,}
+                          \DataTypeTok{male =} \StringTok{"1"}\NormalTok{,}
+                          \DataTypeTok{female =} \StringTok{"2"}\NormalTok{))}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{verbatim}
+## Warning: Unknown levels in `f`: 1, 2
+\end{verbatim}
+
+\hypertarget{using-help}{%
+\section{Using help}\label{using-help}}
+
+In order to become an efficient at analyzing data using R, you will need to become adapt at reading and understanding the help files associated with each command. After you have activated a packages using the library command (e.g., library(tidyverse)) you can access the help page for every command in that package. To access the help page simply type a question mark followed by the command you want to know how to use (no space between them). The code below bring up the help page for the select() command. Notice I put the library() command first - just an reminder that this needs to be done to using help for that package. Try the commands below in the Console:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{library}\NormalTok{(tidyverse)}
+\NormalTok{?select}
+\end{Highlighting}
+\end{Shaded}
+
+Examine the page that appears on the Help tab in the panel in the lower right of your screen. Read through the help file comparing what you read there to what we have learned about the select command. Notice how the help file tells you about the argument you send into the select() command and also what the select command returns when it receives those commands. Pay particular attention to the examples near the bottom of the help page. At the very bottom of the help page you will see {[}Package dplyr version 1.0.0 Index{]}. This tell you the select() command is from the dplyr package (part of the tidyverse). Notice that the word Index is underlined. Click on the word Index. You will be presented with list of other commands in the dplyr package.
+
+As you become more experienced with R help pages how you will learn to use new commands. Examine the help pages for the commands below:
+
+\begin{itemize}
+\tightlist
+\item
+  filter
+\item
+  mutate
+\end{itemize}
+
 \hypertarget{base-r-vs-tidyverse}{%
 \section{Base R vs tidyverse}\label{base-r-vs-tidyverse}}
 
-All of the commands used to this point in the chapter have been the tidyverse appraoch to using. That is the approach we will normally use. However, it's important to note that there is another way of using R, called base R.
+All of the commands used to this point in the chapter have been the tidyverse approach to using R. That is the approach we will normally use. However, it's important to note that there is another way of using R, called base R.
 
 Sometimes students have problems with their code when they mix and match these approaches using a bit of both. We will be using the tidyverse approach to using R but on the internet you will often see sample code that uses the older base R approach. A bit of background knowledge is helpful for understanding why we do things one way (e.g., read\_csv with the tidyverse) instead of another (e.g., read.csv with base R).
 
@@ -2383,7 +2458,7 @@ Regardless of whether your are working from the cloud or locally you should now 
 
 As you read each of these example scripts pay attention to the redundancy. Regardless of the of the type of data you analyze there is a great deal of consistency in terms of how all of the scripts start.
 
-Pay particular attention to XXXX where the reearcher assistant didn't fllow and sex as 1 and
+Also as you follow along on your computer, be sure to used read\_csv when you load data not read.csv (the base R appoach). Also note how in the N-way repeated measures design we were forced to deal with a situation where the research assistant indicated male and female using numbers instead of words when entering the data.
 
 \hypertarget{experiment-between}{%
 \section{Experiment: Between}\label{experiment-between}}
