--- a/02-tidy_intro.Rmd
+++ b/02-tidy_intro.Rmd
@@ -22,15 +22,17 @@ The following data files are used in this chapter:
 
 ## Objective
 
-The objective of this chapter is to familiarize you with some key commands in the tidyverse. The many commands are used in isolation of each other. In the next chapter we will use the commands in a more coordinated way as we load a data and move it from raw data to data that is ready for analysis (i.e., analytic data). You can start this project by Starting the class assignment on R Studio Cloud that corresponds to the chapter name.
+The objective of this chapter is to familiarize you with some key commands in the tidyverse. These commands are used in isolation of each other for the most part. In the next chapter we will use these commands in a more coordinated way as we load a data set and move it from raw data to data that is ready for analysis (i.e., analytic data). You can start this project by Starting the class assignment on R Studio Cloud that corresponds to the chapter name.
 
 
 ## Using the Console
 
-All of the commands in this chapter should be typed into the Console within R. If you see a command split over multiple lines, use SHIFT-RETURN or SHIFT-ENTER to move the next line that is part of the same command. 
+All of the commands in this chapter should be typed into the Console within R. If you see a command split over multiple lines, use SHIFT-RETURN (macOS) or SHIFT-ENTER (Windows) to move the next line that is part of the same command. 
 
 
 ## Basic tidyverse commands
+
+If you inspect the Files tab on the lower-right panel in R Studio you will see the file data_okcupid.csv. The code below loads that file.
 
 ```{r, eval = FALSE}
 library(tidyverse)
@@ -42,7 +44,7 @@ library(tidyverse)
 okcupid_profiles <- read_csv("data_okcupid.csv")
 ```
 
-You can see the first few rows of the data using the print() command:
+You can see the first few rows of the data using the print() command. Each row presents a person whereas each column represents a variable. If you have a large number of columns you will only see the first several columns with this approach to viewing your data.
 
 ```{r}
 print(okcupid_profiles)
@@ -54,19 +56,23 @@ But it's also helpful just to see a list of the columns in the data with the gli
 glimpse(okcupid_profiles)
 ```
 
+The glimpse() command is useful but is quickly allows you to see all of the columns. Moreover, it allows you to see the type for each column. Types were briefly discussed in the last chapter. Notice in the output beside each column name some columns are labeled <dbl> which is short for double -- a type of numeric column. Other columns columns are labeled <chr> which is short for character - meaning the columns contain characters. These designations will become important in the next chapter as we prepare data for analysis.
+
 ### select()
 
-The select() command allows you to obtain a subset of the columns in your data. The commands below can be used to obtain the age and height columns. You can read the command as: take the okcupid_profiles data and then select the age and height columns. You can see that this prints out the data with just the age and height columns.
+The select() command allows you to obtain a subset of the columns in your data. The commands below can be used to obtain the age and height columns. You can read the command as: take the okcupid_profiles data and then select the age and height columns. The "%>%" symbol can be read as "and then". You can see that this code prints out the data with just the age and height columns. Remember, use SHIFT-ENTER or SHIFT-RETURN to move he next line in the block of code.
 
 ```{r}
-okcupid_profiles %>% select(age, height)
+okcupid_profiles %>% 
+  select(age, height)
 ```
 
 
 Of course, it's usually of little help to just print the subset of the data. It's better to store it in a new data. In the command below we store the resulting data in a new data set called new_data.
 
 ```{r}
-new_data <- okcupid_profiles %>% select(age, height)
+new_data <- okcupid_profiles %>% 
+  select(age, height)
 ```
 
 The glimpse() command shows us that only the age and height columns are in new_data.
@@ -92,7 +98,7 @@ glimpse(new_data)
 
 The summarise() command can be used to generate descriptive statistics for a specified column. You can easily calculate column descriptive statistics using the corresponding commands for mean(), sd(), min(), max(), among others. In the example below we calculate the mean for the age column.
 
-In code below mean(age, na.rm = TRUE) indicates that to R that it should calculate the mean of the age column. The na.rm indicates how missing values should be handled. The na stands for not available; in R missing values are classified as Not Available or NA. The rm stands for remove. Consequently, na.rm is asking should we remove missing values when calculating the mean. The TRUE indicates that yes, missing values should be removed when calculating the mean. The result of this calculation is placed into a variable labelled age_mean, though we could have used any label we wanted instead of age_mean. We see that the mean of the age column is, with rounding, `r round(mean(okcupid_profiles$age, na.rm = TRUE),1)`.
+In code below mean(age, na.rm = TRUE) indicates to R that it should calculate the mean of the age column. The na.rm indicates how missing values should be handled. The na stands for not available; in R missing values are classified as Not Available or NA. The rm stands for remove. Consequently, na.rm is asking: "Should we remove missing values when calculating the mean?" The TRUE indicates that yes, missing values should be removed when calculating the mean. The result of this calculation is placed into a variable labelled age_mean, though we could have used any label we wanted instead of age_mean. We see that the mean of the age column is, with rounding, `r round(mean(okcupid_profiles$age, na.rm = TRUE),1)`.
 
 ```{r}
 okcupid_profiles %>% 
@@ -118,7 +124,7 @@ Notice the structure of the original data below in the glimpse() output. There i
 glimpse(okcupid_profiles)
 ```
 
-We use the the filter command to select a subset of the rows based on the contents of any column. In this case the sex column. Notice the use of the the double equals sign to indicate "equal to". The reason a double equals sign is used here (instead of a single equals sign) it to distinguish it from the use of the single equals sign in the summarise command above. In the summarise command above, the single equal sign was used to indicate "assign to". That is assign to age_mean the mean after it is calculated calculated. Single equals sign indicates "assign to" whereas a double equals sign indicates "is equal to".
+We use the the filter command to select a subset of the rows based on the contents of any column. In this case the sex column. Notice the double equals sign is used to indicate "equal to". The reason a double equals sign is used here (instead of a single equals sign) is to distinguish it from the use of the single equals sign in the summarise command above. In the summarise command above, the single equal sign was used to indicate "assign to". That is assign to age_mean the mean of the column age after it is calculated calculated. A single equals sign indicates "assign to" whereas a double equals sign indicates "is equal to".
 
 ```{r}
 okcupid_males <- okcupid_profiles %>%
@@ -130,13 +136,13 @@ okcupid_females <- okcupid_profiles %>%
   filter(sex == "f")
 ```
 
-We use glimpse() to inspect this all male data. Notice that only the letter m is in the sex column. Also notice that there are `r dim(okcupid_males)[1]` rows in the okcupid_males data; fewer people because only the males are in this data.
+We use glimpse() to inspect these all male data. Notice that only the letter m is in the sex column - indicating only males are in the data set. Also notice that there are `r dim(okcupid_males)[1]` rows in the okcupid_males data; fewer people because males are a subset of the total number of rows.
 
 ```{r}
 glimpse(okcupid_males)
 ```
 
-The filter command can be commbined with the summarise command to get the descriptive statistics for males without the hassle of creating a new data. This is done using the %>% "and then" operator.
+The filter command can be commbined with the summarise command to get the descriptive statistics for males without the hassle of creating a new data. This is again done using the %>% "and then" operator.
 
 ```{r}
 okcupid_profiles %>%
@@ -146,7 +152,6 @@ okcupid_profiles %>%
 ```
 
 We see that for the `r dim(okcupid_males)[1]` females the mean age is `r sprintf("%1.1f",mean(okcupid_males$age))` and the standard deviation is `r sprintf("%1.1f",sd(okcupid_males$age))`.
-
 
 Likewise, we can obtain the descriptive statistics for females with only a slight modification, changing m to f in the filter command:
 
@@ -199,7 +204,7 @@ glimpse(okcupid_profiles)
 
 ## Advanced tidyverse commands
 
-In this advanced selection we will revisit the commands from the basic tidyverse section but use more complicated code to either select or apply an action to more than one column at a time. We will indicate the columns that we want to select or apply an action to using: starts_with(), ends_with(), contains(), matches(), or where().  The first four of these are used to indicate columns based on column names. In contrast, the last command, where(), i sued to indicate the columns we want base on the column type (numeric, character, factor, etc.). You can learn more about each of these commands by simply typing into the console a question mark followed by the function name  (e.g., ?where) and then pressing return/enter. This will provide the help page for that function in Help tab in the lower right of R Studio. Note that you must have first activiated the tidyverse via library command for the help file to be accessible.
+In this advanced selection we revisit the commands from the basic tidyverse section but use more complicated code to either select or apply an action to more than one column at a time. We will indicate the columns that we want to select or apply an action to using: starts_with(), ends_with(), contains(), matches(), or where().  The first four of these are used to indicate columns based on column names. In contrast, the last command, where(), is used to indicate the columns based on the column type (numeric, character, factor, etc.). 
 
 We will review all five commands for indicating the columns we want in the select() selection below. Following that we will, for brevity, typically use only one of the five commands when illustrating how they work with summarise() and mutate().
 
@@ -289,7 +294,7 @@ You can learn about regex at [RegexOne](https://regexone.com) and test your rege
 
 #### select() using column type
 
-If many cases we will want to select or perform on action on a column based on whether the column is a numeric, character, or factor column (indicated in glimpse output as dbl, chr, and fct, respectively).  We will learn more about factors in a subsequent chapter. Each of these column types can be selected by using is.numeric, is.character, or is.factor, respectively, in combination with the where() command.
+If many cases we will want to select or perform on action on a column based on whether the column is a numeric, character, or factor column (indicated in glimpse output as dbl, chr, and fct, respectively).  We will learn more about factors later in this chapter. Each of these column types can be selected by using is.numeric, is.character, or is.factor, respectively, in combination with the where() command.
 
 We can select numeric columns using where() and is.numeric:
 
@@ -392,7 +397,7 @@ make_centered <- function(values) {
 }
 ```
 
-The glimpse() command shows us all the column names. Also notice the values in the agresssion columns.s
+The glimpse() command shows us all the column names. Also notice the values in the agresssion columns are integers.
 
 ```{r}
 glimpse(data_exp)
@@ -417,15 +422,15 @@ Note that in the across command above we could also have used: starts_with(), co
 
 #### mutate() across rows
 
-Researchers often want to average within rows and across columns to create a new column. That is for each participant (i.e., rat in the current data) we might want to calculate an vomit rating that is the average of the two time points (that we will call vomit_avg).
+Researchers often want to average within rows and across columns to create a new column. That is for each participant (i.e., rat in the current data) we might want to calculate a vomit score that is the average of the two time points (that we will call vomit_avg).
 
-To average within rows (and across columns) we use the rowwise() command to inform R of our intent. After we do the necessary calculations though we have to shut off the rowwise() calculation state by using the ungroup() command. As well, when we are averaging within rows we have to use c_across() instead of across(). The command below creates a new column called vomit_avg which the average of the vomit ratings across both times. As before, we also include na.rm = TRUE so the computer drops missing values (if present) when calculating the mean.
+To average within rows (and across columns) we use the rowwise() command to inform R of our intent. After we do the necessary calculations though we have to shut off the rowwise() calculation state by using the ungroup() command. As well, when we are averaging within rows we have to use c_across() instead of across(). The commands below creates a new column called vomit_avg which the average of the vomit ratings across both times. As before, we also include na.rm = TRUE so the computer drops missing values (if present) when calculating the mean.
 
 ```{r}
 data_exp <- data_exp %>% 
   rowwise() %>% 
   mutate(vomit_avg = mean( c_across(cols = ends_with("vomit")),
-                               na.rm = TRUE)) %>%
+                           na.rm = TRUE)) %>%
   ungroup()
 ```
 
@@ -435,14 +440,13 @@ You can see the new column we created with the glimpse() command:
 glimpse(data_exp)
 ```
 
-The print() command makes it easier to see the new column is the average of the other two.
+The print() command could make it easier to see the new column is the average of the other two, but if we used the command below it wouldn't work. Why? There are too many columns in the data set so only the first few columns are show.
 
-```{r}
+```{r, eval = FALSE}
 print(data_exp)
 ```
 
-
-We can make it even easier to see by combining tidyverse commands and using only the commands colums we are interested in:
+To see how the new column, vomit_avg, is the average of the other vomit columns we use the select command before print(). This prints only the relvant columns. When this is done, it's easy to see how the values in the vomit_avg column are the mean of the other two columns.
 
 ```{r}
 data_exp %>%
@@ -453,7 +457,7 @@ data_exp %>%
 
 #### mutate() for factors
 
-In R it it is critical that you identify categorical variable as categorical variables. In R categorical variables are referred to as factors. A factor like sex has three possible levels: female, male, intersex. 
+In R it it is critical that you identify categorical variable as categorical variables. In R categorical variables are referred to as factors. For humans, a factor like sex has three possible levels: female, male, intersex. 
 
 An inspection of the glimpse() command output reveals that the sex column has the type character - as indicated by <chr>. Also notice as you inspect this output that we use words (e.g., female) to indicate the sex in the column rather than a number represent a female participant (e.g., 2). This is the preferred but less common approach to entering data.
 
@@ -473,23 +477,22 @@ data_exp <- data_exp %>%
 You can confirm this worked with the glimpse() command:
 
 ```{r}
-data_exp <- data_exp %>%
-  mutate(sex = as_factor(sex))
+glimpse(data_exp)
 ```
 
+If you entered your data using words for each level of sex (e.g., male, female) you're done at this point. However, if you used numbers to represent each level of sex in your data there is one more step. Imagine your data was entered in a poorly advised manner, such that 1 was used to indicate male, 2 was used to indicate female, and 3 was used to indicate intersex. If this was the case, you need to indicate to R what each of those value represents. We do that with the code below.
 
-If you entered your data using words (e.g., male, female) for the levels of sex you're done at this point. However, if you used numbers to represent each sex in your data there is one more step. You have to indicate to R which sex each number represents. We do that with the code below.
-
-```{r}
+```{r, eval = FALSE}
 data_exp <- data_exp %>%
   mutate(sex = fct_recode(sex,
                           male = "1",
-                          female = "2"))
+                          female = "2",
+                          intersex = "3"))
 ```
 
 ## Using help
 
-In order to become an efficient at analyzing data using R, you will need to become adapt at reading and understanding the help files associated with each command. After you have activated a packages using the library command (e.g., library(tidyverse)) you can access the help page for every command in that package. To access the help page simply type a question mark followed by the command you want to know how to use (no space between them). The code below bring up the help page for the select() command. Notice I put the library() command first - just an reminder that this needs to be done  to using help for that package. Try the commands below in the Console:
+In order to become an efficient at analyzing data using R, you will need to become adapt at reading and understanding the help files associated with each command. After you have activated a package using the library command (e.g., library(tidyverse)) you can access the help page for every command in that package. To access the help page simply type a question mark followed by the command you want to know how to use (no space between them). The code below bring up the help page for the select() command. Notice I put the library() command first - just an reminder that this needs to be done prior to using help for that package. Try the commands below in the Console:
 
 ```{r, eval = FALSE}
 library(tidyverse)
@@ -498,11 +501,11 @@ library(tidyverse)
 
 Examine the page that appears on the Help tab in the panel in the lower right of your screen. Read through the help file comparing what you read there to what we have learned about the select command. Notice how the help file tells you about the argument you send into the select() command and also what the select command returns when it receives those commands. Pay particular attention to the examples near the bottom of the help page. At the very bottom of the help page you will see [Package dplyr version 1.0.0 Index]. This tell you the select() command is from the dplyr package (part of the tidyverse). Notice that the word Index is underlined. Click on the word Index. You will be presented with list of other commands in the dplyr package.
 
-As you become more experienced with R help pages how you will learn to use new commands. Examine the help pages for the commands below:
+As you become more experienced with R help pages how you will learn to use new commands. Examine the help pages for the commands below by typing a question mark into the Console followed by the command name. Note that for filter and starts_with you will be presented with a menu instead of help page. This typically occurs because the command is in more than one package. If this does occur, read through the options you are presented with to try and figure out which one you wanted Typically, you want the first option. If you're not sure, try one. It's it's not what you want use the back arrow in the Help panel to go back and pick another one.
 
-* filter
 * mutate
-
+* filter
+* starts_with
 
 
 ## Base R vs tidyverse
